# pip-goes-running

./: README.md  _config.yml  makepost.sh  pyproject.toml
_includes/: goals.md  personal-bests.md  upcoming-events.md
_layouts/: test.html
_pages/: about.md
_posts/: 2023-05-18-blog-post.md  2023-07-16-blog-post.md  2023-07-23-blog-post.md  2023-07-30-blog-post.md  2023-07-9-blog-post.md  2023-08-01-blog-post.md  2023-08-02-blog-post.md  2023-08-06-blog-post.md  2023-08-18-blog-post.md  2023-08-21-blog-post.md  2023-08-27-blog-post.md  2023-09-03-blog-post.md  2023-09-11-blog-post.md  2023-09-17-blog-post.md  2023-09-24-blog-post.md  2023-10-01-blog-post.md  2023-10-09-blog-post.md  2023-10-11-gpx-splitter.md  2023-10-15-blog-post.md  2023-10-22-blog-post.md  2023-10-29-blog-post.md  2023-11-12-blog-post.md  2023-11-12-pre-race.md  2023-11-26-blog-post.md  2024-01-28-blog-post.md  2025-02-14-blog-post.md  2025-03-03-blog-post.md  2025-03-31-blog-post.md
_routes/: PSandN-23-Stage1.gpx
_routes/PSandN-2023-Stage-1-V1/: aa-PDSN-0.gpx  aa-PDSN-1.gpx  aa-PDSN-2.gpx  aa-PDSN-3.gpx
python/: gpx_splitter.ipynb  testing.ipynb
